<resources>
    <string name="app_name" translatable="false">Political Square</string>
    <string name="navigation_drawer_open" translatable="false">Open menu</string>
    <string name="navigation_drawer_close" translatable="false">Close menu</string>
    <string name="intro_title_1">Who you think you are on Political Compass?</string>
    <string name="intro_title_2">Pass Quiz</string>
    <string name="intro_title_3">Who you really are</string>
    <string name="intro_button_next">Next</string>
    <string name="intro_button_get_started">Get Started</string>
    <string name="main_title_actionbar" translatable="false">Political Square</string>
    <string name="main_btn_start">Start</string>
    <string name="main_btn_google_login" translatable="false">Google</string>
    <string name="main_btn_facebook_login" translatable="false">Facebook</string>
    <string name="main_btn_microsoft_login" translatable="false">Microsoft</string>
    <string name="main_txt_register_with">Register via</string>
    <string name="main_link_why_to_register">Why to register?</string>
    <string name="chooseview_title">Choose your political view</string>
    <string name="chooseview_btn_start">Start test</string>
    <string name="chooseview_btn_compass_info">Details about Square</string>
    <string name="txt_question_template" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</string>
    <string name="radio_answer_1_template">Rather no</string>
    <string name="radio_answer_2_template">No</string>
    <string name="radio_answer_3_template">Hard to answer</string>
    <string name="radio_answer_4_template">Rather yes</string>
    <string name="radio_answer_5_template">Yes</string>
    <string name="quiz_radio_answer_1">yes</string>
    <string name="quiz_radio_answer_2">rather yes</string>
    <string name="quiz_radio_answer_3">hard to answer</string>
    <string name="quiz_radio_answer_4">rather no</string>
    <string name="quiz_radio_answer_5">no</string>
    <string name="quiz_title_actionbar">Test</string>
    <string name="quiz_btn_next">Next</string>
    <string name="result_title_actionbar">Result</string>
    <string name="result_subtitle_you_thought">you thought</string>
    <string name="result_title_template">You are communist</string>
    <string name="result_btn_compass_info">More about result</string>
    <string name="result_txt_who_you_was">- who you considered yourself</string>
    <string name="result_txt_you_are">- who you really are</string>
    <string name="saved_title_actionbar">Saved results</string>
    <string name="savedresultdetail_title_actionbar">Saved result</string>
    <string name="savedresultdetail_title_quiz">Quiz option</string>
    <string name="savedresultdetail_title_template">You are communist</string>
    <string name="savedresultdetail_btn_compass_info">More about result</string>
    <string name="savedresultdetail_txt_who_you_was">- who you considered yourself</string>
    <string name="savedresultdetail_txt_you_are">- who you really are</string>
    <string name="settings_title_actionbar">Settings</string>
    <string name="settings_title_change_lang">Language of Interface:</string>
    <string name="settings_radio_ukr" translatable="false">Українська</string>
    <string name="settings_radio_rus" translatable="false">Русский</string>
    <string name="settings_radio_eng" translatable="false">English</string>
    <string name="settings_title_change_quiz">Quiz option</string>
    <string name="navheader_title">Menu</string>
    <string name="all_dialog_do_you_want_to_end">End the quiz?</string>
    <string name="all_dialog_yes">Yes</string>
    <string name="all_dialog_no">No</string>
    <string name="all_title_quiz_option_1">For World</string>
    <string name="all_title_quiz_option_2">For Ukraine</string>
    <string name="all_owner_quiz_option_1">for World</string>
    <string name="all_owner_quiz_option_2">for Ukraine</string>
    <string name="all_desc_quiz_option_1">Owner: Political Square</string>
    <string name="all_desc_quiz_option_2">Owner: VoxUkraine</string>
    <string name="navmenu_main">Main</string>
    <string name="navmenu_saved">Saved</string>
    <string name="navmenu_info">Info</string>
    <string name="navmenu_settings">Settings</string>
    <string name="navmenu_about">About</string>
    <string name="about_title_actionbar">About the app</string>
    <string name="about_title_1">Sources of information</string>
    <string name="about_title_2">Thanks</string>
    <string name="about_title_3">Warning</string>
    <string name="about_desc_1">
        Political square (aka compass, spectrum) is a system of coordinates on which various political movements
         can be distributed depending on the attitude to personal and economic freedom of a person.
        \n
        \nThe quiz shows where you are in this system.
    </string>
    <string name="about_desc_2">
        The quiz for Ukraine was provided by VoxUkraine.
         The quiz for the World was made by the developer of this application.
         Descriptions for ideologies were taken from wikipedia.org and other open sources.
    </string>
    <string name="about_desc_3">
        Thanks to VoxUkraine (Maxim Skubenko) and
         Timofey Brik for the resources and information support provided.
    </string>
    <string name="about_desc_4">
        The quiz does not accurately determine your worldview, but shows your general way of thinking,
         your personal attitude to certain things in the economy and society.
         So if your result is "Socialism", this does not mean that you are a 100% socialist.
    </string>
    <string name="about_voxukraine_title">VoxUkraine</string>
    <string name="about_voxukraine_link">voxukraine.org</string>
    <string name="about_politicalcompass_title">The Political Compass</string>
    <string name="about_politicalcompass_link">voxukraine.org</string>
    <string name="about_privacy_policy_link"><u>Privacy Policy</u></string>
    <string name="about_version">Version 1.1.0</string>
    <string name="info_title_actionbar">Info</string>
    <string name="info_title">Choose an ideology for information</string>
    <string name="info_subtitle_1">General info about compass</string>
    <string name="info_subtitle_2">
        Horizontal axis:
        \nEconomically Right / Economically Left
    </string>
    <string name="info_subtitle_3">
        Vertical axis: \n
        Libertarianism/Authoritarianism
    </string>
    <string name="info_txt_description_template">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="text_desc_compass_1">
         Political square (compass) - coordinate system,
         on which various political trends can be distributed in
         depending on the attitude to personal and economic freedom of a person
    </string>
    <string name="text_desc_compass_2">
        Leftists are for government control of the economy.
        \nThis case is characterized by economic interference and high taxes. This all provides social benefits, free medical services and education.
        Here the government distributes resources between the poor and the rich, and the well-being of each person depends on the state.
        \n
        \nRightists - for maximum freedom of the market and non-interference of the government in the economy.
        \nThe government relies on competition and \"Invisible hand of the market\", tries not to burden businesses with taxes, to control the economy as little as possible.
        \nThe \"right\" is characterized by the idea of ​​voluntary charity and helping the poor instead of social benefits.
        \nTherefore, there is a natural distribution between rich and poor, and well-being of each person depends on themselves.
    </string>
    <string name="text_desc_compass_3">
        The authoritarians are for a strong, traditional state, where the interests of society are higher than personal interests.
        \nPaternalism, the care of the state and the ruler (leader, leader) are inherent in authoritarianism,
        providing the people with security, justice, the protection of a hierarchical society and the preservation of traditions.
        \n
        \nLiberals support the state, where the interests of the individual are higher than the interests of the whole society.
        \nFor liberalism, the idea is that absolutely all people are equal and have equal rights.
        \nThis is why they stand more for democracy, freedom of speech and for maximum non-interference in personal freedom by the state.
    </string>
    <string name="imagedesc_info_compass" translatable="false">Compass info</string>
    <string name="title_result_view_info">Anarchy</string>
    <string name="viewinfo_desc_template">
        All liberals come from the belief that upholding freedoms
        personality is more important than meeting the needs of society.
        Left-wing liberals tend to believe that a person cannot use his freedoms without a certain level
        education and material comfort. In their opinion, this makes redistribution between
        rich and poor. On the contrary, Right-wing Liberals tend to believe that taxing a person against
        his will to provide social benefits to others is an act of violence and thus violates
        individual freedom. They support charity and help for the poor, provided that they are voluntary.

        All supporters of a more authoritarian type of government come from
        that the welfare of society is above the desires of specific individuals.
        Right-wing authoritarianists hold so-called paternalistic political views.
        They defend a hierarchical society and take a tough stance against threats,
        - The criminals are in prison, and foreign states are held back by strong defense.
    </string>
    <string name="title_authoritarian_left">Authoritarian left</string>
    <string name="title_nationalism">Radical nationalism</string>
    <string name="title_powercentrism">Power-centrism</string>
    <string name="title_social_democracy">Social democracy</string>
    <string name="title_socialism">Socialism</string>
    <string name="title_authoritarian_right">Authoritarian right</string>
    <string name="title_radical_capitalism">Radical capitalism</string>
    <string name="title_conservatism">Conservatism</string>
    <string name="title_progressivism">Progressivism</string>
    <string name="title_right_anarchy">Right anarchy</string>
    <string name="title_anarchy">Anarchy</string>
    <string name="title_liberalism">Liberalism</string>
    <string name="title_libertarianism">Libertarianism</string>
    <string name="title_left_anarchy">Left anarchy</string>
    <string name="title_liberal_socialism">Liberal socialism</string>
</resources>